Magick.NET.Native/MagickImage.h



MAGICK_NET_EXPORT size_t MagickImage_ClassType_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_ClassType_Set(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT double MagickImage_ColorFuzz_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ColorFuzz_Set(Image *, const double);


MAGICK_NET_EXPORT ssize_t MagickImage_ColormapSize_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_ColormapSize_Set(Image *, const ssize_t, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_ColorSpace_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_ColorSpace_Set(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_ColorType_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_ColorType_Set(Image *, const size_t value, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_Compose_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Compose_Set(Image *, const size_t);


MAGICK_NET_EXPORT size_t MagickImage_CompressionMethod_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_CompressionMethod_Set(Image *, const size_t);


MAGICK_NET_EXPORT size_t MagickImage_Depth_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Depth_Set(Image *, const size_t);


MAGICK_NET_EXPORT const char *MagickImage_EncodingGeometry_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_Endian_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Endian_Set(Image *, const size_t);


MAGICK_NET_EXPORT const char *MagickImage_FileName_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_FileName_Set(Image *, const char *);


MAGICK_NET_EXPORT long MagickImage_FileSize_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_FilterType_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_FilterType_Set(Image *, const size_t);


MAGICK_NET_EXPORT const char *MagickImage_Format_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Format_Set(Image *, const char *);


MAGICK_NET_EXPORT double MagickImage_Gamma_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_GifDisposeMethod_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_GifDisposeMethod_Set(Image *, const size_t);


MAGICK_NET_EXPORT size_t MagickImage_Interpolate_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Interpolate_Set(Image *, const size_t);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_HasAlpha_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_HasAlpha_Set(Image *, const MagickBooleanType);


MAGICK_NET_EXPORT size_t MagickImage_Height_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_Interlace_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Interlace_Set(Image *, const size_t);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_IsOpaque_Get(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT double MagickImage_MeanErrorPerPixel_Get(const Image *);


MAGICK_NET_EXPORT double MagickImage_NormalizedMaximumError_Get(const Image *);


MAGICK_NET_EXPORT double MagickImage_NormalizedMeanError_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_Orientation_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Orientation_Set(Image *, const size_t);


MAGICK_NET_EXPORT size_t MagickImage_RenderingIntent_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_RenderingIntent_Set(Image *, const size_t);


MAGICK_NET_EXPORT RectangleInfo *MagickImage_Page_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Page_Set(Image *, const RectangleInfo *);


MAGICK_NET_EXPORT size_t MagickImage_Quality_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Quality_Set(Image *, const size_t);


MAGICK_NET_EXPORT Image *MagickImage_ReadMask_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_ReadMask_Set(Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_ResolutionUnits_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ResolutionUnits_Set(Image *, const  size_t);


MAGICK_NET_EXPORT double MagickImage_ResolutionX_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ResolutionX_Set(Image *, const  double);


MAGICK_NET_EXPORT double MagickImage_ResolutionY_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ResolutionY_Set(Image *, const double);


MAGICK_NET_EXPORT const char *MagickImage_Signature_Get(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_TotalColors_Get(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_VirtualPixelMethod_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_VirtualPixelMethod_Set(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_Width_Get(const Image *);


MAGICK_NET_EXPORT Image *MagickImage_WriteMask_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_WriteMask_Set(Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AdaptiveBlur(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AdaptiveResize(const Image *, const size_t, const size_t, ExceptionInfo **);